--- a/debian/rules
+++ b/debian/rules
@@ -19,7 +19,7 @@ export LIB_SEARCH_OPTIONS
 ifeq ($(DEB_HOST_ARCH),armhf)
 #   export EXTRA_CMAKE_OPTS=-DCMAKE_TOOLCHAIN_FILE=../scripts/build/ubuntu_cross.cmake -DUSE_CTC=true
 	# stripping doesn't work with the cross compile
-  #export DEB_BUILD_OPTIONS += nostrip
+  	export DEB_BUILD_OPTIONS += nostrip
 	export LIB_SEARCH_OPTIONS = -l$(ARMHF_CHROOT_DIR)/opt/rti/ndds/lib/armv6vfphLinux3.xgcc4.7.2:$(ARMHF_CHROOT_DIR)/opt/ros/kinetic/lib:$(ARMHF_CHROOT_DIR)/opt/ros/kinetic/lib/arm-linux-gnueabihf:$(ARMHF_CHROOT_DIR)/lib:$(ARMHF_CHROOT_DIR)/usr/lib:$(ARMHF_CHROOT_DIR)/usr/lib/arm-linux-gnueabihf:$(ARMHF_CHROOT_DIR)/lib/arm-linux-gnueabihf -- --ignore-missing-info --admindir=$(ARMHF_CHROOT_DIR)/var/lib/dpkg 
 	export DEB_MAINT_CC_SET = $(ARMHF_TOOLCHAIN)/bin/arm-linux-gnueabihf-gcc
 	export DEB_MAINT_CXX_SET = $(ARMHF_TOOLCHAIN)/bin/arm-linux-gnueabihf-g++
@@ -44,7 +44,7 @@ override_dh_auto_build: ;
 # the install command is already invoked in the build
 override_dh_auto_install:
 	cd .. && \
-	catkin build
+	catkin build execute_asap coordinator
 
 override_dh_install:
 	dh_movefiles
