Tweak CMake files to allow cross-compilation

--- a/asap/coordinator/CMakeLists.txt
+++ b/asap/coordinator/CMakeLists.txt
@@ -63,7 +63,7 @@ target_include_directories(SecondaryNodelet PUBLIC ${catkin_INCLUDE_DIRS} ${EIGE
 add_dependencies(SecondaryNodelet ${catkin_EXPORTED_TARGETS})
 target_link_libraries(SecondaryNodelet ${catkin_LIBRARIES} ${EIGEN_LIBRARIES})
 
-# install(TARGETS PrimaryNodelet SecondaryNodelet DESTINATION lib)
+install(TARGETS PrimaryNodelet SecondaryNodelet DESTINATION lib)
 
 install(FILES nodelet_plugins.xml
         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
