--- a/asap/execute_asap/CMakeLists.txt
+++ b/asap/execute_asap/CMakeLists.txt
@@ -3,7 +3,7 @@ project(execute_asap)
 
 add_compile_options(-std=c++14)
 
-find_package(catkin REQUIRED COMPONENTS
+find_package(catkin2 REQUIRED COMPONENTS
   message_generation
   std_msgs
   geometry_msgs
@@ -27,3 +27,5 @@ install(DIRECTORY launch/
 install(DIRECTORY config/ DESTINATION share/${PROJECT_NAME}/config)
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/scripts/ DESTINATION share/${PROJECT_NAME}/scripts USE_SOURCE_PERMISSIONS)
+
+install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/../../astrobee/scripts/env_wrapper_asap.sh DESTINATION ${CMAKE_INSTALL_PREFIX} )
