--- a/debian/rules
+++ b/debian/rules
@@ -34,7 +34,7 @@ override_dh_auto_configure-arch:
 # build and install for architecture dependent only
 override_dh_auto_install-arch:
 	# Make sure we only extend what we need
-	cd .. && CMAKE_PREFIX_PATH=$(CMAKE_PREFIX_PATH) catkin build
+	cd .. && CMAKE_PREFIX_PATH=$(CMAKE_PREFIX_PATH) catkin build execute_asap coordinator
 
 # override only for arch dependent, for astrobee-config let it use default
 override_dh_install-arch:
